--- a/VXL_STM32_Lab01_Ex01.ioc
+++ b/VXL_STM32_Lab01_Ex01.ioc
@@ -11,10 +11,13 @@ Mcu.IP1=RCC
 Mcu.IPNb=2
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA6
-Mcu.Pin2=PA7
-Mcu.PinsNb=3
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -31,16 +34,28 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=RED_1
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=YELLOW_1
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=GREEN_1
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LED_RED
+PA5.GPIO_Label=RED_2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=LED_YELLOW
+PA6.GPIO_Label=YELLOW_2
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LED_GREEN
+PA7.GPIO_Label=GREEN_2
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
